--- a/lib/generators/haml/scaffold/templates/show.html.haml
+++ b/lib/generators/haml/scaffold/templates/show.html.haml
@@ -17,5 +17,5 @@
 
 .form-actions
   = link_to_with_icon(t(:'shared.back'), 'icon-arrow-left', <%= index_helper %>_path, :class => 'btn')
-  = link_to_with_icon(t(:'shared.edit'), 'icon-edit icon-white', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-primary') if allowed_to?(:edit)
-  = link_to_with_icon(t(:'shared.destroy'), 'icon-trash icon-white', <%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-danger', :method => :delete, :confirm => t(:'shared.destroy_confirmation')) if allowed_to?(:destroy)
+  = link_to_with_icon(t(:'shared.edit'), 'icon-edit icon-white', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-primary') if policy(@user).edit?
+  = link_to_with_icon(t(:'shared.destroy'), 'icon-trash icon-white', <%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-danger', :method => :delete, :confirm => t(:'shared.destroy_confirmation')) if policy(@user).destroy?
